# liberror

./: Cargo.toml  LICENSE.txt  README.md
examples/: sample.rs
src/: lib.rs  type_name.rs
