[package]
name = "liberror"
version = "0.1.0"
edition = "2024"
authors = ["Charlie Thomson <charliethomson@users.noreply.github.com>"]
description = "A serializable wrapper for any standard Rust error that preserves the error chain"
repository = "https://github.com/charliethomson/liberror"
license = "MIT"
license-file = "LICENSE.txt"
keywords = ["error", "serialization", "thiserror", "error-handling"]
categories = ["rust-patterns", "no-std", "error-handling"]
readme = "README.md"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
valuable = { version = "0.1.1", features = ["derive"] }

[dev-dependencies]
serde_json = "*"
